c2dascript-transpile/tests/snapshots/snapshots__transpile@lift_const.das.snap
---
source: c2dascript-transpile/tests/snapshots.rs
expression: cat tests/snapshots/lift_const.das
---
options gen2

def c2da_min_int(a : int; b : int) : int {
    if (a < b) {
        return a
    } else {
        return b
    }
}
def c2da_max_int(a : int; b : int) : int {
    if (a > b) {
        return a
    } else {
        return b
    }
}
def c2da_min_uint(a : uint; b : uint) : uint {
    if (a < b) {
        return a
    } else {
        return b
    }
}
def c2da_max_uint(a : uint; b : uint) : uint {
    if (a > b) {
        return a
    } else {
        return b
    }
}
def c2da_min_int64(a : int64; b : int64) : int64 {
    if (a < b) {
        return a
    } else {
        return b
    }
}
def c2da_max_int64(a : int64; b : int64) : int64 {
    if (a > b) {
        return a
    } else {
        return b
    }
}
def c2da_min_uint64(a : uint64; b : uint64) : uint64 {
    if (a < b) {
        return a
    } else {
        return b
    }
}
def c2da_max_uint64(a : uint64; b : uint64) : uint64 {
    if (a > b) {
        return a
    } else {
        return b
    }
}
def c2da_clip_uint(v : int) : uint {
    if (v < 0) {
        return 0x0
    }
    if (v > 255) {
        return 0xff
    }
    return uint(v)
}
def c2da_bool_to_uint(v : bool) : uint {
    if (v) {
        return 0x1
    } else {
        return 0x0
    }
}
def c2da___assert_fail(expr : void?; file : void?; line : uint; func : void?) {
}
[export]
def lift_const(var argc : int; var argv : int8??) {
    if (int(argc) == 3) {
        goto label 93470
    }
    var starts_with_a : int const = int(int(*unsafe(unsafe(unsafe(reinterpret<int8??>(argv)))[0])) == 97)
    if (uint64(starts_with_a) != uint64(0)) {
        printf(unsafe(addr("  (arg 0 starts with 'a')
"[0])))
    }
    label 93470:
    if (int(argc) == 3) {
        printf(unsafe(addr("  (argc was 3)
"[0])))
    }
}

[export] def main() : int {
    return 0
}
