c2dascript-transpile/tests/snapshots/snapshots__transpile@loops.das.snap
---
source: c2dascript-transpile/tests/snapshots.rs
expression: transpile --strict tests/snapshots/loops.c
---
options gen2
options solid_context = true

var c2da_rt_heap : array<uint8>

var c2da_rt_locals : array<uint64>

var c2da_rt_next : uint64 = 0x0

var c2da_rt_alloc_addrs : array<uint64>

var c2da_rt_alloc_sizes : array<uint64>

var c2da_rt_alloc_live : array<bool>

var c2da_rt_alloc_free : array<int>

def c2da_rt_init_heap() {
    if (empty(c2da_rt_heap)) {
        reserve(c2da_rt_heap, 1073741824l)
        resize(c2da_rt_heap, 1)
    }
}
def c2da_rt_reset() {
    c2da_rt_next = 0x0
    resize(c2da_rt_alloc_addrs, 0)
    resize(c2da_rt_alloc_sizes, 0)
    resize(c2da_rt_alloc_live, 0)
    resize(c2da_rt_alloc_free, 0)
}
def c2da_rt_find_record(address : uint64) : int {
    var lo : int = 0
    var hi : int = length(c2da_rt_alloc_addrs)
    while (lo < hi) {
        let mid : int = (lo + hi) / 2
        if (c2da_rt_alloc_addrs[mid] < address) {
            lo = mid + 1
        } else {
            hi = mid
        }
    }
    if (lo < length(c2da_rt_alloc_addrs) && c2da_rt_alloc_addrs[lo] == address) {
        return lo
    }
    return -1
}
def c2da_rt_take_free(need : uint64) : int {
    var best : int = -1
    var best_slot : int = -1
    var slot : int = length(c2da_rt_alloc_free) - 1
    while (slot >= 0) {
        let record : int = c2da_rt_alloc_free[slot]
        let capacity : uint64 = c2da_rt_alloc_sizes[record]
        if (capacity >= need && capacity - need <= need) {
            if (best < 0 || capacity < c2da_rt_alloc_sizes[best]) {
                best = record
                best_slot = slot
            }
            if (capacity == need) {
                break
            }
        }
        slot -= 1
    }
    if (best >= 0) {
        c2da_rt_alloc_free[best_slot] = c2da_rt_alloc_free[length(c2da_rt_alloc_free) - 1]
        pop(c2da_rt_alloc_free)
    }
    return best
}
def c2da_rt_malloc(size : uint64) : uint64 {
    c2da_rt_init_heap()
    if (size == 0x0 || size > 0x40000000) {
        return 0x0
    }
    let need : uint64 = (size + 0xf) / 0x10 * 0x10
    let reused : int = c2da_rt_take_free(need)
    if (reused >= 0) {
        c2da_rt_alloc_live[reused] = true
        return c2da_rt_alloc_addrs[reused]
    }
    let base : uint64 = unsafe(intptr(unsafe(addr(c2da_rt_heap[0x0]))))
    let start : uint64 = (base + c2da_rt_next + 0xf) / 0x10 * 0x10 - base
    let end : uint64 = start + need
    if (end > 0x40000000) {
        return 0x0
    }
    if (int64(end) > long_length(c2da_rt_heap)) {
        resize(c2da_rt_heap, int64(end))
    }
    c2da_rt_next = end
    let address : uint64 = unsafe(intptr(unsafe(addr(c2da_rt_heap[start]))))
    let record : uint64 = uint64(long_length(c2da_rt_alloc_addrs))
    resize(c2da_rt_alloc_addrs, int64(record + 0x1))
    resize(c2da_rt_alloc_sizes, int64(record + 0x1))
    resize(c2da_rt_alloc_live, int64(record + 0x1))
    c2da_rt_alloc_addrs[record] = address
    c2da_rt_alloc_sizes[record] = need
    c2da_rt_alloc_live[record] = true
    return address
}
def c2da_rt_free(address : uint64) {
    let record : int = c2da_rt_find_record(address)
    if (record >= 0 && c2da_rt_alloc_live[record]) {
        c2da_rt_alloc_live[record] = false
        push(c2da_rt_alloc_free, record)
    }
}
def c2da_rt_realloc(address : uint64; size : uint64) : uint64 {
    if (address == 0x0) {
        return c2da_rt_malloc(size)
    }
    if (size == 0x0) {
        c2da_rt_free(address)
        return 0x0
    }
    let record : int = c2da_rt_find_record(address)
    if (record < 0 || !c2da_rt_alloc_live[record]) {
        return 0x0
    }
    let capacity : uint64 = c2da_rt_alloc_sizes[record]
    if (size <= capacity) {
        return address
    }
    if (size > 0x40000000) {
        return 0x0
    }
    let need : uint64 = (size + 0xf) / 0x10 * 0x10
    let start : uint64 = address - unsafe(intptr(unsafe(addr(c2da_rt_heap[0x0]))))
    let end : uint64 = start + need
    if (start + capacity == c2da_rt_next && end <= 0x40000000) {
        if (int64(end) > long_length(c2da_rt_heap)) {
            resize(c2da_rt_heap, int64(end))
        }
        c2da_rt_next = end
        c2da_rt_alloc_sizes[record] = need
        return address
    }
    let replacement : uint64 = c2da_rt_malloc(size)
    if (replacement == 0x0) {
        return 0x0
    }
    c2da_rt_memcpy(replacement, address, capacity)
    c2da_rt_free(address)
    return replacement
}
def c2da_rt_memset(dst : uint64; value : uint8; count : uint64) : uint64 {
    var done : uint64 = 0x0
    while (done < count) {
        let chunk : uint64 = count - done < 0x40000000ul ? count - done : 0x40000000ul
        unsafe(memset8(unsafe(reinterpret<void?>(dst + done)), value, int(chunk)))
        done += chunk
    }
    return dst
}
def c2da_rt_calloc(count : uint64; size : uint64) : uint64 {
    let total : uint64 = count * size
    if (size != 0x0 && total / size != count) {
        return 0x0
    }
    let address : uint64 = c2da_rt_malloc(total)
    if (address != 0x0) {
        c2da_rt_memset(address, 0x0u8, total)
    }
    return address
}
def c2da_rt_memcpy(dst : uint64; src : uint64; count : uint64) : uint64 {
    var i : uint64 = 0x0
    while (i < count) {
        unsafe(unsafe(reinterpret<uint8?>(dst))[i]) = unsafe(unsafe(reinterpret<uint8?>(src))[i])
        i = i + 0x1
    }
    return dst
}
def c2da_rt_memcmp(left : uint64; right : uint64; count : uint64) : int {
    var i : uint64 = 0x0
    while (i < count) {
        if (uint(unsafe(unsafe(reinterpret<uint8?>(left))[i])) < uint(unsafe(unsafe(reinterpret<uint8?>(right))[i]))) {
            return -1
        }
        if (uint(unsafe(unsafe(reinterpret<uint8?>(left))[i])) > uint(unsafe(unsafe(reinterpret<uint8?>(right))[i]))) {
            return 1
        }
        i = i + 0x1
    }
    return 0
}
def c2da_rt_memmove(dst : uint64; src : uint64; count : uint64) : uint64 {
    if (dst < src) {
        var i : uint64 = 0x0
        while (i < count) {
            unsafe(unsafe(reinterpret<uint8?>(dst))[i]) = unsafe(unsafe(reinterpret<uint8?>(src))[i])
            i = i + 0x1
        }
    } else {
        var i : uint64 = count
        while (i > 0x0) {
            i = i - 0x1
            unsafe(unsafe(reinterpret<uint8?>(dst))[i]) = unsafe(unsafe(reinterpret<uint8?>(src))[i])
        }
    }
    return dst
}
def c2da_rt_memchr(src : uint64; value : uint8; count : uint64) : uint64 {
    var i : uint64 = 0x0
    while (i < count) {
        if (unsafe(unsafe(reinterpret<uint8?>(src))[i]) == value) {
            return src + i
        }
        i = i + 0x1
    }
    return 0x0
}
def c2da_rt_frame_enter() : int {
    return length(c2da_rt_locals)
}
def c2da_rt_frame_leave(mark : int) {
    while (length(c2da_rt_locals) > mark) {
        c2da_rt_free(c2da_rt_locals[length(c2da_rt_locals) - 1])
        pop(c2da_rt_locals)
    }
}
def c2da_rt_local(size : uint64; align : uint64) : uint64 {
    let address = c2da_rt_calloc(0x1ul, size + 0x1)
    if (address == 0x0) {
        panic("c2da runtime: the 1073741824-byte heap reserve cannot hold storage for a C local")
    }
    push(c2da_rt_locals, address)
    return address
}
def c2da_rt_static(size : uint64; align : uint64) : uint64 {
    let address = c2da_rt_calloc(0x1ul, size + 0x1)
    if (address == 0x0) {
        panic("c2da runtime: the 1073741824-byte heap reserve cannot hold storage for a C static object")
    }
    return address
}
struct C2daVaArg {
    tag : int
    i64 : int64
    f64 : double
    raw : uint64
}
struct C2daVaCursor {
    index : int
}
def c2da_clip_uint(v : int) : uint {
    if (v < 0) {
        return 0x0
    }
    if (v > 255) {
        return 0xff
    }
    return uint(v)
}
def c2da_bool_to_uint(v : bool) : uint {
    if (v) {
        return 0x1
    } else {
        return 0x0
    }
}
def c2da___assert_fail(expr : void?; file : void?; line : uint; func : void?) {
}
[export]
def while_loop(var x : int) : int {
    while (x != 0) {
        x += 1
    }
    return x
}
[export]
def for_loop(var x_0 : int) : int {
    var i : int = 0
    while (i < 10) {
        x_0 += 1
        i += 1
    }
    return x_0
}
[export]
def infinite_loop(var x_1 : int) {
    while (true) {
        x_1 += 1
    }
}
[export]
def goto_loop(var x_2 : int) : int {
    label 0:
    x_2 += 1
    if (x_2 != 0) {
        goto label 1
    }
    return x_2
    label 1:
    goto label 0
    panic("unreachable: fell out of a translated control-flow graph")
}
[export]
def do_while_loop(var x_3 : int) : int {
    while (true) {
        x_3 += 1
        if (x_3 == 0) {
            break
        }
    }
    return x_3
}
[export]
def break_while(var x_4 : int) : int {
    while (x_4 != 0) {
        if (x_4 != 0) {
            x_4 += 1
            if (x_4 != 0) {
                break
            }
        }
        x_4 += 2
    }
    return x_4
}
[export]
def continue_while(var x_5 : int) : int {
    while (x_5 != 0) {
        if (x_5 != 0) {
            x_5 += 1
            if (x_5 != 0) {
                continue
            }
        }
        x_5 += 2
    }
    return x_5
}
[export]
def trivial_nested_while(var x_6 : int) {
    while (x_6 != 0) {
        while (x_6 != 0) {
            while (x_6 != 0) {
                x_6 += 1
            }
        }
    }
    return
}
[export]
def nested_while(var x_7 : int) {
    while (x_7 != 0) {
        while (x_7 != 0) {
            while (x_7 != 0) {
                x_7 += 1
            }
            x_7 += 2
        }
        x_7 += 3
    }
    return
}
[export]
def nested_for(var x_8 : int) {
    var i_0 : int
    var j : int
    i_0 = 0
    while (i_0 < 5) {
        j = 0
        while (j < 5) {
            x_8 += 1
            j += 1
        }
        i_0 += 1
    }
    return
}
[export]
def exit_nested_loops(var x_9 : int) : int {
    label 0:
    if (x_9 != 0) {
        goto label 2
    }
    label 1:
    return x_9
    label 2:
    label 3:
    if (x_9 != 0) {
        goto label 4
    }
    goto label 0
    label 4:
    if (x_9 != 0) {
        goto label 5
    }
    x_9 += 1
    goto label 3
    label 5:
    goto label 1
    panic("unreachable: fell out of a translated control-flow graph")
}
[export]
def continue_nested_loops(var x_10 : int) : int {
    label 0:
    label 1:
    if (x_10 != 0) {
        goto label 2
    }
    return x_10
    label 2:
    label 3:
    if (x_10 != 0) {
        goto label 4
    }
    x_10 += 2
    goto label 1
    label 4:
    if (x_10 != 0) {
        goto label 5
    }
    x_10 += 1
    goto label 3
    label 5:
    goto label 0
    panic("unreachable: fell out of a translated control-flow graph")
}
[export]
def break_and_continue_nested_loops(var x_11 : int) : int {
    label 0:
    label 1:
    if (x_11 != 0) {
        goto label 3
    }
    label 2:
    return x_11
    label 3:
    label 4:
    if (x_11 != 0) {
        goto label 5
    }
    x_11 += 2
    goto label 1
    label 5:
    if (x_11 != 0) {
        goto label 7
    }
    if (x_11 != 0) {
        goto label 6
    }
    x_11 += 1
    goto label 4
    label 6:
    goto label 0
    label 7:
    goto label 2
    panic("unreachable: fell out of a translated control-flow graph")
}
[export]
def for_loop_single_continue(var x_12 : int) : int {
    var i_1 : int = 0
    while (i_1 < 10) {
        if (x_12 != 0) {
            if (x_12 != 0) {
                i_1 += 1
                continue
            }
        }
        x_12 += 1
        i_1 += 1
    }
    return x_12
}
[export]
def for_loop_multi_continue(var x_13 : int) : int {
    var i_2 : int = 0
    while (i_2 < 10) {
        if (x_13 != 0) {
            if (x_13 != 0) {
                i_2 += 1
                continue
            }
        }
        x_13 += 1
        if (x_13 != 0) {
            if (x_13 != 0) {
                i_2 += 1
                continue
            }
        }
        x_13 += 2
        i_2 += 1
    }
    return x_13
}
[export]
def do_loop_single_continue(var x_14 : int) : int {
    while (true) {
        if (x_14 != 0) {
            if (x_14 != 0) {
                if (x_14 == 0) {
                    break
                }
                continue
            }
        }
        x_14 += 1
        if (x_14 == 0) {
            break
        }
    }
    return x_14
}
[export]
def do_loop_multi_continue(var x_15 : int) : int {
    while (true) {
        if (x_15 != 0) {
            if (x_15 != 0) {
                if (x_15 == 0) {
                    break
                }
                continue
            }
        }
        x_15 += 1
        if (x_15 != 0) {
            if (x_15 != 0) {
                if (x_15 == 0) {
                    break
                }
                continue
            }
        }
        x_15 += 2
        if (x_15 == 0) {
            break
        }
    }
    return x_15
}
[export]
def explicit_loop_multi_exit(var x_16 : int) : int {
    label 0:
    if (x_16 == 1) {
        goto label 2
    } elif (x_16 == 2) {
        goto label 3
    }
    x_16 += 6
    label 1:
    x_16 += 4
    return x_16
    label 2:
    x_16 += 1
    goto label 0
    label 3:
    x_16 += 2
    if (x_16 != 0) {
        goto label 5
    }
    x_16 += 4
    label 4:
    x_16 += 5
    goto label 1
    label 5:
    x_16 += 3
    goto label 4
    panic("unreachable: fell out of a translated control-flow graph")
}
[export]
def implicit_loop_multi_exit(var x_17 : int) : int {
    label 0:
    if (x_17 == 1) {
        goto label 2
    } elif (x_17 == 2) {
        goto label 3
    }
    x_17 += 6
    label 1:
    x_17 += 4
    return x_17
    label 2:
    x_17 += 1
    goto label 0
    label 3:
    x_17 += 2
    if (x_17 != 0) {
        goto label 5
    }
    x_17 += 4
    label 4:
    x_17 += 5
    goto label 1
    label 5:
    x_17 += 3
    goto label 4
    panic("unreachable: fell out of a translated control-flow graph")
}
[export]
def loop_returns(var x_18 : int) : int {
    while (x_18 != 0) {
        x_18 += 1
        if (x_18 != 0) {
            x_18 += 2
            return x_18
        }
        x_18 += 3
        if (x_18 != 0) {
            x_18 += 4
            return x_18
        }
    }
    return x_18
}
[export]
def loop_gotos(var x_19 : int) : int {
    label 0:
    if (x_19 != 0) {
        goto label 1
    }
    return x_19
    label 1:
    x_19 += 1
    if (x_19 != 0) {
        goto label 4
    }
    x_19 += 3
    if (x_19 != 0) {
        goto label 2
    }
    x_19 += 5
    goto label 0
    label 2:
    x_19 += 4
    label 3:
    return -x_19
    label 4:
    x_19 += 2
    goto label 3
    panic("unreachable: fell out of a translated control-flow graph")
}
[export]
def loop_early_return(var x_20 : int) : int {
    while (x_20 != 0) {
        x_20 += 1
        if (x_20 != 0) {
            x_20 += 2
            return x_20
        }
    }
    return -x_20
}
[export]
def if_else_loops(var x_21 : int) {
    if (x_21 != 0) {
        while (x_21 != 0) {
            x_21 += 1
        }
    } else {
        while (x_21 != 0) {
            x_21 += 2
        }
    }
    return
}
[export]
def goto_loops(var x_22 : int) : int {
    if (x_22 != 0) {
        goto label 3
    }
    label 0:
    x_22 += 2
    if (x_22 != 0) {
        goto label 2
    }
    label 1:
    return x_22
    label 2:
    goto label 0
    label 3:
    label 4:
    x_22 += 1
    if (x_22 != 0) {
        goto label 5
    }
    goto label 1
    label 5:
    goto label 4
    panic("unreachable: fell out of a translated control-flow graph")
}
[export]
def goto_into_loops(var x_23 : int) {
    if (x_23 != 0) {
        goto label 3
    }
    label 0:
    x_23 += 2
    if (x_23 != 0) {
        goto label 2
    }
    label 1:
    return
    label 2:
    goto label 0
    label 3:
    label 4:
    x_23 += 1
    if (x_23 != 0) {
        goto label 5
    }
    goto label 1
    label 5:
    goto label 4
    panic("unreachable: fell out of a translated control-flow graph")
}
[export]
def goto_separate_loops(var x_24 : int) {
    if (x_24 != 0) {
        goto label 2
    }
    label 0:
    x_24 += 2
    if (x_24 != 0) {
        goto label 0
    }
    label 1:
    return
    label 2:
    label 3:
    x_24 += 1
    if (x_24 != 0) {
        goto label 3
    }
    goto label 1
    panic("unreachable: fell out of a translated control-flow graph")
}
